[package]
name = "netidx-sysfs"
version = "0.1.0"
edition = "2021"
description = "An on demand publisher of sysfs/procfs using io uring"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

[dependencies]
anyhow = "1"
bytes = "1"
env_logger = "0.9"
futures = "0.3"
fxhash = "0.2"
globset = "0.4"
immutable-chunkmap = "1"
log = "0.4"
netidx-tools = {version = "0.12", path = "../netidx/netidx-tools" }
netidx = { version = "0.12", path = "../netidx/netidx" }
serde = "1"
serde_derive = "1"
serde_json = "1"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
triomphe = "0.1"
