[package]
name = "netidx-sysfs"
version = "0.1.2"
edition = "2021"
description = "An on demand publisher of sysfs/procfs"
repository = "https://github.com/estokes/netidx-sysfs"
readme = "README.md"
license = "MIT"
keywords = ["network", "networking", "distributed", "kerberos"]
categories = ["command-line-utilities"]

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

[dependencies]
anyhow = "1"
bytes = "1"
env_logger = "0.11"
futures = "0.3"
fxhash = "0.2"
globset = "0.4"
immutable-chunkmap = "2"
log = "0.4"
netidx-tools-core = "0.27"
netidx = "0.27"
serde = "1"
serde_derive = "1"
serde_json = "1"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
triomphe = "0.1"
